--- a/java-concurrent-programming-in-action/pom.xml
+++ b/java-concurrent-programming-in-action/pom.xml
@@ -60,6 +60,12 @@
             <version>1.7.25</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>9.0.36</version>
+        </dependency>
+
     </dependencies>
 
 
