--- a/java-concurrent-programming-in-action/pom.xml
+++ b/java-concurrent-programming-in-action/pom.xml
@@ -66,6 +66,15 @@
             <version>9.0.36</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.6</version>
+            <scope>provided</scope>
+        </dependency>
+
+
     </dependencies>
 
 
