--- a/java-concurrent-programming-in-action/pom.xml
+++ b/java-concurrent-programming-in-action/pom.xml
@@ -95,6 +95,12 @@
             <version>4.0.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor_2.12</artifactId>
+            <version>2.5.21</version>
+        </dependency>
 
     </dependencies>
 
