--- a/java-concurrent-programming-in-action/pom.xml
+++ b/java-concurrent-programming-in-action/pom.xml
@@ -102,6 +102,14 @@
             <version>2.5.21</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.multiverse/multiverse-alpha -->
+        <dependency>
+            <groupId>org.multiverse</groupId>
+            <artifactId>multiverse-alpha</artifactId>
+            <version>0.6</version>
+        </dependency>
+
+
     </dependencies>
 
 
